Fix table bugs: spacing, fill and cursor (#152)
- Added margin-right to filter icon
- Added iui-actionable class for cursor: pointer in header cells
- Added iui-icons-color fill for sort icon hover state

--- a/src/table/table.scss
+++ b/src/table/table.scss
@@ -23,7 +23,7 @@
   @include iui-table-cell-icon;
 }
 
-@mixin iui-table-header { 
+@mixin iui-table-header {
   user-select: none;
   @include themed {
     background-color: t(iui-color-background-3);
@@ -36,10 +36,14 @@
 
   .iui-cell:not(.iui-slot) {
     @include iui-focus;
-    cursor: pointer;
+
+    &.iui-actionable {
+      cursor: pointer;
+    }
 
     > .iui-filter-button {
       margin-left: $iui-xs;
+      margin-right: $iui-s;
 
       &:not(.iui-active) {
         visibility: hidden;
@@ -57,7 +61,7 @@
       cursor: ew-resize;
       z-index: 100;
       display: none;
-        
+
       > .iui-resizer-bar {
         height: 100%;
         width: $iui-xxs;
@@ -98,7 +102,7 @@
   .iui-sort {
     visibility: hidden;
     @include themed {
-      fill: t(iui-icons-color-actionable);
+      fill: t(iui-icons-color);
     }
   }
 
@@ -110,6 +114,9 @@
 
     .iui-sort {
       visibility: visible;
+      @include themed {
+        fill: t(iui-icons-color-actionable);
+      }
     }
   }
 }
@@ -122,7 +129,7 @@
   @include themed {
     background-color: t(iui-color-background-1);
   }
-  
+
   .iui-row {
     display: flex;
     flex-grow: 1;
@@ -216,7 +223,7 @@
     // #region Statuses & states
     &.iui-new {
       font-weight: $iui-font-weight-semibold;
-      
+
       > .iui-main-column::before {
         content: '•';
         position: absolute;
@@ -248,15 +255,15 @@
     }
 
     &.iui-positive {
-      @include iui-table-row-status($status:positive);
+      @include iui-table-row-status($status: positive);
     }
-    
+
     &.iui-warning {
-      @include iui-table-row-status($status:warning);
+      @include iui-table-row-status($status: warning);
     }
 
     &.iui-negative {
-      @include iui-table-row-status($status:negative);
+      @include iui-table-row-status($status: negative);
     }
     // #endregion Statuses & states
   }
@@ -294,15 +301,15 @@
   }
 
   &.iui-positive {
-    @include iui-table-cell-status($status:positive);
+    @include iui-table-cell-status($status: positive);
   }
-    
+
   &.iui-warning {
-    @include iui-table-cell-status($status:warning);
+    @include iui-table-cell-status($status: warning);
   }
 
   &.iui-negative {
-    @include iui-table-cell-status($status:negative);
+    @include iui-table-cell-status($status: negative);
   }
 }
 
